--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,7 @@ name: .NET
 
 on:
   push:
-    tags:
-    - "v[0-9]+.[0-9]+.[0-9]+"
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -17,17 +16,29 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Exit if not on the main branch
-        if: endsWith(github.ref, 'main') == false
-        run: exit -1
+      if: endsWith(github.ref, 'main') == false
+      run: exit -1
         
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
+
+
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0
+      with:
+        versionSpec: '5.x'
         
     - name: Build
       run: dotnet build basic-framework.sln -c Release
 
     - name: Pack
       run: dotnet pack basic-framework.sln -o tmpnuGet --no-restore
+
+    - name: Display GitVersion config
+      uses: gittools/actions/gitversion/execute@v0
+      with:
+        useConfigFile: true
+        additionalArguments: '/showConfig'
           
