refactor: renamed files and projects

--- a/illyW.Framework.EFCore/illyW.Framework.EFCore.csproj
+++ b/illyW.Framework.EFCore/illyW.Framework.EFCore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<PackageId>illyW.Framework.Core</PackageId>
+		<PackageId>illyW.Framework.EFCore</PackageId>
 		<Version>1.2.0.0</Version>
 		<Authors>William Paciaroni</Authors>
 		<Company>illy-W</Company>
@@ -13,19 +13,23 @@
 		<Description></Description>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RootNamespace>illyW.Framework.EFCore</RootNamespace>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<PackageOutputPath>..\nuGet</PackageOutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	</PropertyGroup>
 
-	<ItemGroup> 
-        <None Include="docs\README.md" Pack="true" PackagePath="\"/> 
-    </ItemGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-	</ItemGroup>
-	
+    	<ProjectReference Include="..\illyW.Framework.Core\illyW.Framework.Core.csproj" />
+  	</ItemGroup>
+
 </Project>
