--- a/illyW.Framework.Core/illyW.Framework.Core.csproj
+++ b/illyW.Framework.Core/illyW.Framework.Core.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<PackageId>illyW.Framework.EFCore</PackageId>
+		<PackageId>illyW.Framework.Core</PackageId>
 		<Version>1.2.0.0</Version>
 		<Authors>William Paciaroni</Authors>
 		<Company>illy-W</Company>
@@ -13,7 +13,15 @@
 		<Description></Description>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RootNamespace>illyW.Framework</RootNamespace>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<PackageOutputPath>..\nuGet</PackageOutputPath>
@@ -21,15 +29,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.App" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
 	</ItemGroup>
-
-	<ItemGroup> 
-        <None Include="docs\README.md" Pack="true" PackagePath="\"/> 
-    </ItemGroup>
-
-	<ItemGroup>
-    	<ProjectReference Include="..\Bscframework.Core\Bscframework.Core.csproj" />
-  	</ItemGroup>
-
+	
 </Project>
